# GenealogicalTree

./: CMakeLists.txt  GenealogicalTree.kdev4  GenealogicalTree.sln  GenealogicalTree.vcxproj  GenealogicalTree.vcxproj.filters  README.md  genealogicaltree.cpp  genealogicaltree.h  main.cpp  names.h  prompthandler.cpp  prompthandler.h  sample_tree.txt  treefilegenerator.cpp  treefilegenerator.h  treefileloader.cpp  treefileloader.h  utils.h
